--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -15,7 +15,7 @@
     }
 
     &::before {
-      content: '<h1>';
+      content: '<kuete>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
       font-size: 18px;
@@ -26,7 +26,7 @@
     }
 
     &:after {
-      content: '</h1>';
+      content: '</kuete>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
       font-size: 18px;
