contact form using emailjs

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -6,7 +6,7 @@
   margin-left: 0;
   position: absolute;
   right: 0;
-  order: hidden;
+  overflow: hidden;
 }
 
 .cubespinner {
@@ -24,6 +24,7 @@
     height: 200px;
     border: 1px solid #ccc;
     background: rgba(255, 255, 255, 0.4);
+    text-align: center;
     font-size: 100px;
     display: flex;
     justify-content: center;
