--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -67,6 +67,7 @@
         width: 100%;
         text-align: center;
         opacity: 0;
+        -webkit-transition: all 0.3s ease-out;
         transition: all 0.3s ease-out;
       }
 
@@ -112,8 +113,9 @@
         display: block;
         font-size: 15px;
         line-height: 16px;
+        color: #4d4d4e;
 
-        &:hover svg {
+        &:hover {
           color: #ffd700;
         }
       }
