--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -1,33 +1,35 @@
 .home-page {
+  .text-zone {
+    position: absolute;
+    left: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40%;
+    max-height: 90%;
+  }
+
   h1 {
     color: #fff;
-    font-size: 53px;
+    font-size: 56px;
+    line-height: 53px;
     margin: 0;
     font-family: 'Coolvetica';
     font-weight: 400;
-    img {
-      width: 32px;
-      margin-left: 20px;
-      opacity: 0;
-      height: auto;
-      animation: rotateIn 1s linear both;
-      animation-delay: 1.4s;
-    }
 
-    &::before {
-      content: '<kuete>';
-      font-family: 'La Belle Aurore';
+    &:before {
+      content: '<h1>';
+      font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
-      left: 15px;
+      left: -15px;
       opacity: 0.6;
     }
 
     &:after {
-      content: '</kuete>';
-      font-family: 'La Belle Aurore';
+      content: '<h1/>';
+      font-family: 'La Belle Aurore', cursive;
       color: #ffd700;
       font-size: 18px;
       position: absolute;
@@ -35,6 +37,15 @@
       margin-left: 20px;
       animation: fadeIn 1s 1.7s backwards;
       opacity: 0.6;
+    }
+
+    img {
+      margin-left: 20px;
+      opacity: 0;
+      width: 32px;
+      height: auto;
+      animation: rotateIn 1s linear both;
+      animation-delay: 1.4s;
     }
   }
 
@@ -59,21 +70,12 @@
     border: 1px solid #ffd700;
     margin-top: 25px;
     float: left;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeInAnimation 1s 1.8s backwards;
     white-space: nowrap;
 
     &:hover {
       background: #ffd700;
       color: #333;
     }
-  }
-
-  .text-zone {
-    position: absolute;
-    left: 10%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 40%;
-    max-height: 90%;
   }
 }
