--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -16,7 +16,7 @@
   bottom: 0;
   left: 120px;
   font-size: 18px;
-  font-family: 'La Belle Aurore';
+  font-family: 'La Belle Aurore', cursive;
 }
 
 .bottom-tag-html {
@@ -25,7 +25,7 @@
 
 .container {
   width: 100%;
-  will-change: 'contents';
+  will-change: contents;
   height: 90%;
   min-height: 566px;
   position: absolute;
@@ -38,7 +38,8 @@
   animation-delay: 1s;
 }
 
-.about-page {
+.container.contact-page,
+.container.about-page {
   .text-zone {
     position: absolute;
     left: 10%;
@@ -57,11 +58,12 @@
       margin-top: 0;
       position: relative;
       margin-bottom: 40px;
-      left: 10px;
+      left: -10px;
 
-      &::before {
-        content: '<demo>';
-        font-family: 'La Belle Aurore';
+      &:before {
+        content: '<h1>';
+        font-family: 'La Belle Aurore', cursive;
+        color: #ffd700;
         font-size: 18px;
         position: absolute;
         margin-top: -10px;
@@ -70,35 +72,33 @@
         line-height: 18px;
       }
 
-      &::after {
-        content: '</demo>';
-        font-family: 'La Belle Aurore';
+      &:after {
+        content: '<h1/>';
+        font-family: 'La Belle Aurore', cursive;
+        color: #ffd700;
         font-size: 18px;
+        line-height: 18px;
         position: absolute;
-        margin-left: 20px;
         left: -30px;
         bottom: -20px;
+        margin-left: 20px;
         opacity: 0.6;
-        line-height: 18px;
       }
     }
 
     p {
-      font-style: 13px;
+      font-size: 13px;
       color: #fff;
       font-family: sans-serif;
       font-weight: 300;
-      min-width: fit-content;
+      max-width: fit-content;
       animation: pulse 1s;
-
       &:nth-of-type(1) {
         animation-delay: 1.1s;
       }
-
       &:nth-of-type(2) {
         animation-delay: 1.2s;
       }
-
       &:nth-of-type(3) {
         animation-delay: 1.3s;
       }
